# cargo-version-info

./: .clippy.toml  .gitignore  .rust-toolchain.toml  ANSWERS_TO_QUESTIONS.md  AUTOMATION_SUMMARY.md  CLAUDE.md  Cargo.toml  DEPENDABOT_ROLLOUT_SUMMARY.md  LICENSE  PLAN.md  README.md  REUSABLE_ACTIONS_SUMMARY.md  build.rs  cog.toml  rustfmt.toml
.bash/: gha-generate-changelog.sh
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/skills/commit/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.cursor/rules/: markdown-line-length.mdc  markdown-style.mdc
.githooks/: commit-msg  post-commit  pre-commit
.github/: CODEOWNERS  CONTRIBUTING.md  DEPENDABOT_AUTOMATION.md  MAINTAINERS.md  PUBLISH.md  SETUP_CHECKLIST.md  dependabot.yml
.github/actions/: README.md
.github/actions/generate-changelog/: action.yml
.github/actions/setup-cargo-binstall/: action.yml
.github/actions/setup-cargo-edit/: action.yml
.github/actions/setup-cocogitto/: action.yml
.github/workflows/: auto-version-bump.yml  ci.yml
scripts/: setup-dev.sh
src/: github.rs  lib.rs  main.rs  version.rs
src/commands/: badges.rs  build_version.rs  changed.rs  changelog.rs  common.rs  compare.rs  current.rs  dev.rs  dioxus.rs  latest.rs  mod.rs  next.rs  post_bump_hook.rs  pr_log.rs  pre_bump_hook.rs  release_page.rs  rust_toolchain.rs  tag.rs  update_readme.rs
src/commands/badge/: adrs.rs  all.rs  common.rs  coverage.rs  cratesio.rs  framework.rs  license.rs  mod.rs  number_of_tests.rs  platform.rs  runtime.rs  rust_edition.rs  rustdocs.rs
src/commands/bump/: README.md  args.rs  commit.rs  diff.rs  hooks.rs  mod.rs  readme_update.rs  signing.rs  tests.rs  tree.rs  version_update.rs
