[package]
name = "cargo-version-info"
description = "Cargo subcommand for unified version management across CI/CD, Rust code, and shell scripts"
version = "0.0.1"
edition = "2024"
license = "MIT"
keywords = ["cargo", "version", "semver", "cli", "ci", "cd"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
repository = "https://github.com/agnos-ai/cargo-version-info"
documentation = "https://docs.rs/cargo-version-info"
homepage = "https://github.com/agnos-ai/cargo-version-info"
rust-version = "1.92.0"
publish = true

[[bin]]
name = "cargo-version-info"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", default-features = false, features = [
    "derive",
    "env",
    "std",
] }
dotenvage = "0.1.0"
gix = { version = "0.77.0", default-features = false }
octocrab = "0.49.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.9.10+spec-1.1.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }
tempfile = "3.10"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
