[package]
name = "cargo-version-info"
description = "Cargo subcommand for unified version management across CI/CD, Rust code, and shell scripts"
version = "0.0.9"
edition = "2024"
license-file = "LICENSE"
keywords = ["cargo", "version", "semver", "cli", "ci"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
repository = "https://github.com/dataroadinc/cargo-version-info"
documentation = "https://docs.rs/cargo-version-info"
homepage = "https://github.com/dataroadinc/cargo-version-info"
rust-version = "1.92.0"
publish = true

exclude = [
    ".cargo/",
    ".cargo-husky/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "cog.toml",
    "rustfmt.toml",
    "scripts/",
]

[[bin]]
name = "cargo-version-info"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.1"
cargo_metadata = "0.23.1"
clap = { version = "4.5.54", default-features = false, features = [
    "derive",
    "env",
    "std",
] }
dotenvage = "0.1.3"
gix = { version = "0.77.0", default-features = false, features = [
    "revision",
    "worktree-mutation",
    "index",
    "blob-diff",
] }
octocrab = { version = "0.49.5", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "retry",
    "rustls",
    "rustls-aws-lc-rs",
    "timeout",
    "tracing",
    "futures-util",
    "hyper-rustls",
    "hyper-timeout",
    "tokio",
    "jwt-aws-lc-rs",
] }
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
toml = "=0.9.8"
toml_edit = "0.24.0"
carlog = "0.1"
console = "0.16.2"
indicatif = "0.18.3"
cargo-plugin-utils = "0.0.8"
portable-pty = "0.9.0"
smallvec = "1.15.1"
tempfile = "3.24.0"
similar = { version = "2.7.0", features = ["text"] }

[build-dependencies]
anyhow = "1.0.100"
gix = { version = "0.77.0", default-features = false, features = [
    "revision",
    "worktree-mutation",
    "index",
    "blob-diff",
] }
toml = "=0.9.8"
sloughi = "0.3"

[dev-dependencies]
tempfile = "3.24"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
